--- a/roles/get-computes/templates/compute_hosts.j2
+++ b/roles/get-computes/templates/compute_hosts.j2
@@ -1,3 +1,7 @@
+#
+# WARNING: The contents of this file will be overwritten by the
+# get-hosts role.
+#
 [computes]
 {% for line in hlist.stdout_lines %}
 {% if 'enabled' in line %}
