added support for including service_host name in report

--- a/roles/get-computes/templates/compute_hosts.j2
+++ b/roles/get-computes/templates/compute_hosts.j2
@@ -3,10 +3,6 @@
 # get-hosts role.
 #
 [computes]
-{% for line in hlist.stdout_lines %}
-{% if 'enabled' in line %}
-{% if line.split()|length >= 4 %}
-{{ line.split()[3] }}
-{% endif %}
-{% endif %}
+{% for line in hyper_names_list %}
+{{ line }}
 {% endfor %}
