Fixing DCIP+Nuage integration bugs.
Closes-Bug: OPENSTACK-1963, OPENSTACK-1965, OPENSTACK-1989
Change-Id: I75477ea6d530bcd0c98dd6dba08ffcdeaa0d8a57

--- a/nuage-topology-collector/roles/topology/templates/output.j2
+++ b/nuage-topology-collector/roles/topology/templates/output.j2
@@ -1,5 +1,5 @@
 {
-    "hypervisor hostname": "{{ inventory_hostname }}",
+    "hypervisor hostname": "{{ hostname|default("") }}",
     "service_host name": "{{ service_host|default("") }}",
     "interfaces": [
 {% for interface in interface_json.results %}
