--- a/nuage-topology-collector/roles/topology/templates/output.j2
+++ b/nuage-topology-collector/roles/topology/templates/output.j2
@@ -2,10 +2,11 @@
     "hypervisor hostname": "{{ hostname|default("") }}",
     "service_host name": "{{ service_host|default("") }}",
     "interfaces": [
-{% for interface in interface_json.results %}
-
-        {{ interface.stdout }}{% if not loop.last%},{% endif %}
-
-{% endfor %}
+{% set comma = joiner(', ') %}
+{% for interface in interface_json.results -%}
+        {% if interface.stdout %}
+            {{ comma() }}{{ interface.stdout }}
+        {% endif %}
+{%- endfor %}
      ]
 }
