--- a/nuage_topology_collector/roles/topology/templates/output.j2
+++ b/nuage_topology_collector/roles/topology/templates/output.j2
@@ -4,7 +4,7 @@
     "interfaces": [
 {% set comma = joiner(', ') %}
 {% for interface in interface_json.results -%}
-        {% if interface.stdout %}
+        {% if interface.stdout is defined and interface.stdout is not none %}
             {{ comma() }}{{ interface.stdout }}
         {% endif %}
 {%- endfor %}
