TC performance/scale improvements - incr I
This patchset ensures irrelevant host/interfaces are
excluded from lldp information collection.
Additionally, inventory is not written to file anymore.

Change-Id: Idd2c96984e5712608f7fecef3112c68e0bcd745c
Partial-Bug: PROD-10832

--- a/nuage_topology_collector/roles/topology/templates/output.j2
+++ b/nuage_topology_collector/roles/topology/templates/output.j2
@@ -1,5 +1,5 @@
 {
-    "hypervisor hostname": "{{ hostname|default("") }}",
+    "hypervisor hostname": "{{ service_host|default("") }}",
     "service_host name": "{{ service_host|default("") }}",
     "interfaces": [
 {% set comma = joiner(', ') %}
