TC performance/scale improvements - incr II
- LLDP collection is done now completely in python, using
  raw socket + kernel packet filtering.
- VF info collection is done in python.
- Ansible Topology module is executed once per compute iso
  per interface
- No lunacy of creating json by string concatenation anymore.

Change-Id: I7ea4a7f31ce274ddb982accb58055e965c06e1f5
Closes-Bug: PROD-10832

--- a/nuage_topology_collector/roles/topology/templates/output.j2
+++ b/nuage_topology_collector/roles/topology/templates/output.j2
@@ -1,12 +1,4 @@
 {
-    "hypervisor hostname": "{{ service_host|default("") }}",
     "service_host name": "{{ service_host|default("") }}",
-    "interfaces": [
-{% set comma = joiner(', ') %}
-{% for interface in interface_json.results -%}
-        {% if interface.stdout is defined and interface.stdout is not none %}
-            {{ comma() }}{{ interface.stdout }}
-        {% endif %}
-{%- endfor %}
-     ]
+    "interfaces": {{ interfaces_json.stdout }}
 }
